# sqlite-napi

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  package.json  test-tx.ts  tsconfig.json
.github/workflows/: build.yml  publish.yml
docs/: ROADMAP.md  changelog.md  orm-skill.md
downloads/v0.0.4/: checksums.txt
downloads/v1.0.1/: checksums.txt
examples/: dev.ts  error-validation.ts  media-orm.ts  schema-orm.ts  scratch_test_sync.ts  zod-example.ts  zod-ts.ts
examples/core/: columns.ts  constants.ts  database.ts  driver.ts  index.ts  schema-rust.ts  schema.ts  table.ts  zod.ts
scripts/: build_multiplatform.ts
src/: db.rs  error.rs  lib.rs  models.rs  schema.rs
src/db/: database.rs  mod.rs  params.rs  row.rs  statement.rs  transaction.rs
tests/: bigint.test.ts  blob.test.ts  compatibility.test.ts  custom-functions.test.ts  database-properties.test.ts  database.test.ts  error.test.ts  index.test.ts  iterator.test.ts  migration.test.ts  options.test.ts  parameters.test.ts  pragma.test.ts  schema.test.ts  schema_test.rs  serialize.test.ts  sqlite.test.ts  statement-metadata.test.ts  statement.test.ts  transaction.test.ts  types.test.ts
