[package]
name = "napi_template"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "napi_template"

[package.metadata.napi]
targets = [
  "x86_64-pc-windows-msvc",
  "i686-pc-windows-msvc",
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
]

[dependencies]
napi = { version = "3.8.2", features = ["napi9", "async", "serde-json"] }
napi-derive = "3.5.1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31.0", features = [
  "bundled",
  "load_extension",
  "modern_sqlite",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
